manifests/deployments/data-hub/data-hub-api/data-hub-api--stg.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-hub-api--stg
  labels:
    app: data-hub-api--stg
  namespace: data-hub
spec:
  selector:
    matchLabels:
      app: data-hub-api--stg
  template:
    metadata:
      labels:
        app: data-hub-api--stg
    spec:
      containers:
      - name: data-hub-api
        image: ghcr.io/elifesciences/data-hub-api_unstable:develop-75e38a2e-20260916.1026 # {"$imagepolicy": "data-hub:data-hub-api-unstable"}
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 8000
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 5
          timeoutSeconds: 120
          periodSeconds: 60
        readinessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 5
          timeoutSeconds: 120
          periodSeconds: 60
        resources:
          requests:
            cpu: 700m
            memory: 1500Mi
          limits:
            memory: 1624Mi
        volumeMounts:
        - name: gcp-credentials-sealed-secret-volume
          mountPath: /root/.gcp
          readOnly: true
      volumes:
      - name: gcp-credentials-sealed-secret-volume
        secret:
          secretName: gcloud
      tolerations:
      - key: workload
        operator: Equal
        value: "services"
        effect: NoSchedule
      nodeSelector:
        data-hub-workload: "services"
---
apiVersion: v1
kind: Service
metadata:
  name: data-hub-api--stg
  namespace: data-hub
spec:
  selector:
    app: data-hub-api--stg
  ports:
  - port: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: data-hub-api--stg
  namespace: data-hub
  labels:
    app: data-hub-api--stg
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  ingressClassName: traefik
  rules:
    - host: data-hub-api--stg.elifesciences.org
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: data-hub-api--stg
                port:
                  number: 8000
  tls:
    - hosts:
        - data-hub-api--stg.elifesciences.org
      secretName: data-hub-api-stg-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: data-hub-api--stg-docmap-index
  namespace: data-hub
  labels:
    app: data-hub-api--stg
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    traefik.ingress.kubernetes.io/router.middlewares: data-hub-data-hub-api-docmap-index-rate-limit-stg@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: data-hub-api--stg.elifesciences.org
      http:
        paths:
          - pathType: Prefix
            path: "/enhanced-preprints/docmaps/v2/index"
            backend:
              service:
                name: data-hub-api--stg
                port:
                  number: 8000
  tls:
    - hosts:
        - data-hub-api--stg.elifesciences.org
      secretName: data-hub-api-stg-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: data-hub-api-kotahi--stg
  namespace: data-hub
  labels:
    app: data-hub-api--stg
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    traefik.ingress.kubernetes.io/router.middlewares: data-hub-data-hub-api-kotahi-basic-auth-stg@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: data-hub-api--stg.elifesciences.org
      http:
        paths:
          - pathType: Prefix
            path: "/kotahi"
            backend:
              service:
                name: data-hub-api--stg
                port:
                  number: 8000
  tls:
    - hosts:
        - data-hub-api--stg.elifesciences.org
      secretName: data-hub-api-stg-tls
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: data-hub-api-kotahi-basic-auth--stg
  namespace: data-hub
spec:
  basicAuth:
    secret: data-hub-api-kotahi-basic-auth
    realm: "Authentication Required"
    removeHeader: true
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: data-hub-api-docmap-index-rate-limit--stg
  namespace: data-hub
spec:
  inFlightReq:
    amount: 3
